fixed carousel on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1078,7 +1078,7 @@ body {
     width: 100%;
     height: 100%;
     background: #e6b001;
-    clip-path: circle(0% at 88% 4%);
+    clip-path: circle(0% at 90% 6%);
     z-index: 0;
     transition: all .7s; }
     .hero_container header nav ul {
@@ -1193,10 +1193,15 @@ body {
     font-size: .9rem; }
   .works .works_carouselcontainer {
     width: 100%;
-    padding: 10px 30px;
-    height: 600px; }
-    .works .works_carouselcontainer .swiper-wrapper .swiper-slide-active img {
-      width: 85%; }
+    padding: 5px 30px;
+    height: 550px; }
+    .works .works_carouselcontainer .swiper-wrapper .swiper-slide-active {
+      padding-top: 15px;
+      padding-bottom: 15px; }
+      .works .works_carouselcontainer .swiper-wrapper .swiper-slide-active img {
+        width: 85%; }
+    .works .works_carouselcontainer .swiper-button-next:after, .works .works_carouselcontainer .swiper-button-prev:after {
+      font-size: 1.7rem !important; }
   .blogposts_container .blog_posts {
     flex-direction: column;
     justify-content: center;
