--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -567,7 +567,7 @@
                 width:100%;
                 height:100%;
                 background: #e6b001;
-                clip-path: circle(0% at 88% 4%);              
+                clip-path: circle(0% at 90% 6%);              
                 z-index:0; 
                 transition: all .7s;    
 
@@ -841,14 +841,16 @@
         
         .works_carouselcontainer{
             width:100%;   
-            padding:10px 30px;       
-            height:600px;  
+            padding:5px 30px;          
+            height:550px;    
             
             .swiper-wrapper{
 
                 .swiper-slide{
 
                     &-active{
+                        padding-top:15px; 
+                        padding-bottom:15px;  
 
                         img{
                             width:85%; 
@@ -857,6 +859,10 @@
 
                 }
 
+            }
+             
+            .swiper-button-next:after, .swiper-button-prev:after{
+                font-size:1.7rem !important; 
             }
                 
         }
